# openenclave

./: .gitmodules  CHANGELOG.md
.jenkins/: Jenkinsfile  Packaging.Jenkinsfile
.jenkins/provision/templates/oe-engine/: win-2016.json
api/: enclave_8h.html  enclave_8h__incl.map  exception_8h.html  host_8h.html  index.html  properties_8h.html  report_8h.html  result_8h.html  struct__oe__exception__record.html  struct__oe__report.html  types_8h.html
cmake/: compiler_settings.cmake  openenclave-config.cmake.in  sdk_cmake_targets_readme.md
debugger/ptraceLib/: CMakeLists.txt
device/fs/hostfs/enclave/: hostfs.c
device/resolver/hostresolver/enc/: hostresolver.c
device/socket/hostsock/common/: hostsockargs.h
device/socket/hostsock/enc/: hostsock.c
device/socket/hostsock/host/linux/: hostsock.c
docs/GettingStartedDocs/: install_oe_sdk-Ubuntu_16.04.md  install_oe_sdk-Ubuntu_18.04.md
enclave/core/: CMakeLists.txt  device.c  syscall.c
enclave/core/sgx/: report.c
host/: CMakeLists.txt
libc/: CMakeLists.txt
pkgconfig/: CMakeLists.txt
samples/randomSample/: Makefile  randomSample.edl
samples/randomSample/enc/: Makefile  enc.c
samples/randomSample/host/: Makefile  host.c
samples/tls_with_attestation/client/enc/: client.cpp
samples/tls_with_attestation/server/enc/: server.cpp
scripts/: install-windows-prereqs.ps1
scripts/ansible/: oe-windows-acc-setup.yml
tests/libcxx/: tests.unsupported
tests/mbed/: tests.broken  tests.supported
tests/mbed/enc/: enc.c
tests/resolver/enc/: enc.c
tests/resolver/host/: host.c
(+4 files in other folders)
